--- a/src/pages/template/index.html
+++ b/src/pages/template/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-    <title>FORCEPU.SH Buy Signal</title>
+    <title>Algotrade.io Buy Signal</title>
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne+Mono">
     <style type="text/css">
@@ -41,7 +41,7 @@
     <div style="background:#1f1f1f;display:flex;justify-content:center;gap:10px;padding:17px 0">
         <img src="../../assets/logo.png" width="24px">
         <span style="font-size:20px;font-weight:600">
-            <span>FORCE</span><span style="color:#52e5ff">PU.SH</span>
+            <span>Algotrade</span><span style="color:#52e5ff">.io</span>
         </span>
     </div>
     <!-- body -->
@@ -73,7 +73,7 @@
                             style="color:#F7931A"><b>BTC</b></span>) since its inception.</div>
                 </div>
                 <div style="padding:30px 0;width:100%;display:flex;justify-content:center;align-items:center">
-                    <a href="https://forcepu.sh/signals" target="_blank" rel="noopener noreferrer"
+                    <a href="https://algotrade.io/signals" target="_blank" rel="noopener noreferrer"
                         style="width:fit-content"><button class="text">View Signals</button></a>
                 </div>
             </div>
@@ -81,7 +81,7 @@
     </div>
     <!-- footer -->
     <div style="background:#1f1f1f;color:#a6a6a6;text-align:center;padding:21px 0">
-        <a style="color:#a6a6a6" href="https://forcepu.sh/alerts" target="_blank"
+        <a style="color:#a6a6a6" href="https://algotrade.io/alerts" target="_blank"
             rel="noopener noreferrer">unsubscribe</a>
     </div>
 </body>
